# son

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 42fca29d2f59_add_clipboard_history.py  705fc898cbed_add_calorie_tracking_tables.py  a3b16e46304a_initial_schema.py
app/agent/: agent.py  prompts.py
app/api/: routes.py
app/config/: settings.py
app/database/: models.py  session.py
app/discord_bot/: bot.py
app/scheduler/: tasks.py
app/telegram/: bot.py  handlers.py
app/tools/: __init__.py  base.py  calories.py  clipboard.py  fetch_webpage.py  filesystem.py  news.py  note.py  preferences.py  profile.py  remind.py  search.py  search_web.py  summary.py  todo.py
docker/: Dockerfile  docker-compose.yml
