[project]
name = "son-assistant"
version = "0.1.0"
description = "Son Personal AI Assistant with Telegram and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-telegram-bot>=21.3",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.1",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "dateparser>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "openai>=1.35.0",
    "discord.py>=2.3.2",
]

[dependency-groups]
dev = [
    "black>=24.4.2",
    "ruff>=0.4.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

